--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,6 +3,7 @@ Flask-CORS>=4.0.0
 numpy>=1.26.0
 pandas>=2.1.0
 scikit-learn>=1.3.0
+scipy>=1.11.0
 joblib>=1.3.1
 librosa>=0.10.1
 soundfile>=0.12.1
